login page layout bug fixed

--- a/emotif/public/css/main.css
+++ b/emotif/public/css/main.css
@@ -7,110 +7,6 @@ body {
   overflow: scroll;
   background-color: #93DE7F;
 
-  /*background-size: 173px 173px, 311px 311px, 547px 547px, 683px 683px;
-  background-image:
-  background-size: 173px 173px, 311px 311px, 547px 547px, 683px 683px;
-/*  background-image:
-    -webkit-linear-gradient(     0, rgba(255,255,255, .02) 50%, transparent 50%),
-    -webkit-linear-gradient(     0, rgba(255,255,255, .04) 50%, transparent 50%),
-    -webkit-linear-gradient(180deg, rgba(255,255,255, .07) 50%, transparent 50%),
-    -webkit-linear-gradient(180deg, rgba(255,255,255, .06) 50%, transparent 50%);
-  background-image:
-    -moz-linear-gradient(     0, rgba(255,255,255, .02) 50%, transparent 50%),
-    -moz-linear-gradient(     0, rgba(255,255,255, .04) 50%, transparent 50%),
-    -moz-linear-gradient(180deg, rgba(255,255,255, .07) 50%, transparent 50%),
-    -moz-linear-gradient(180deg, rgba(255,255,255, .06) 50%, transparent 50%);
-  background-image:
-    -ms-linear-gradient(     0, rgba(255,255,255, .02) 50%, transparent 50%),
-    -ms-linear-gradient(     0, rgba(255,255,255, .04) 50%, transparent 50%),
-    -ms-linear-gradient(180deg, rgba(255,255,255, .07) 50%, transparent 50%),
-    -ms-linear-gradient(180deg, rgba(255,255,255, .06) 50%, transparent 50%);
-  background-image:
-    -o-linear-gradient(     0, rgba(255,255,255, .02) 50%, transparent 50%),
-    -o-linear-gradient(     0, rgba(255,255,255, .04) 50%, transparent 50%),
-    -o-linear-gradient(180deg, rgba(255,255,255, .07) 50%, transparent 50%),
-    -o-linear-gradient(180deg, rgba(255,255,255, .06) 50%, transparent 50%);
-  background-image:
-    linear-gradient(     0, rgba(255,255,255, .02) 50%, transparent 50%),
-    linear-gradient(     0, rgba(255,255,255, .04) 50%, transparent 50%),
-    linear-gradient(180deg, rgba(255,255,255, .07) 50%, transparent 50%),
-    linear-gradient(180deg, rgba(255,255,255, .06) 50%, transparent 50%);
-    */
-
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
 }
 
 /********************************
@@ -131,7 +27,7 @@ body {
 * Main, Login, Signup page CSS
 *********************************/
 
-.main-logo {
+/*.main-logo {
   position:fixed;
   left: 50%;
   margin-left: -75px;
@@ -170,8 +66,53 @@ body {
   font-size: 14px;
   color: white;
   font-weight: 300;
+}*/
+
+.main-logo {
+  /*margin-left: 85px;*/
+  margin-top: 60px;
+  width: 100%;
+  text-align: center;
 }
 
+.main-logo img{
+  display: inline-block;
+  width: 150px;
+}
+
+.intro {
+  margin: 10px 10px 30px 10px;
+  text-align: center;
+  color: white;
+  font-family: "Bradley Hand ITC TT", "Papyrus", "Helvetica Neue", sans-serif;
+  font-weight: 300;
+  font-size: 15pt;
+}
+
+.main-center {
+  margin-top: 10px;
+}
+
+.main-footer {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 14px;
+  color: white;
+  font-weight: 300;
+}
+
+/*.content {
+  width: 100%;
+  height:100%;
+}
+
+.container {
+  width:100%;
+  position: absolute;
+  top: 50%;
+  margin-top: -250px;
+}
+*/
 /*  For Homework Only  */
 .main-center-2 {
   position: fixed;
@@ -313,10 +254,6 @@ body {
   border-color: transparent;
   border-radius: 2px;
 }
-
-/*.item-input {
-  background-color: #F29E4A;
-}*/
 
 /********************************
 * Select page CSS
